<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    tools:context=".activities.Register.FirstRegisterActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="415dp"
        android:layout_height="71dp"
        android:contentDescription="@string/descriptionHeader"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="VisualLintBounds">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/hint_write"

            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/hint_write"

            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp"
            android:textStyle="bold"
            android:autofillHints=""
            tools:ignore="TextFields,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/hint_write"

            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp"
            android:textStyle="bold"
            android:autofillHints=""
            tools:ignore="TextFields,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/rePassword"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtRePassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/hint_write"

            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp"
            android:textStyle="bold"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/txtErrorLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whiteString"
            android:textColor="#E60F0F"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="59dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/descriptionBackButton"
        android:rotation="180"
        android:text="@string/whiteString"
        android:textColorHighlight="#00FFFFFF"
        android:textColorLink="#00FFFFFF"
        app:icon="@drawable/arrow_point_to_right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#00FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>