<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    tools:context=".activities.register.FirstRegisterActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="415dp"
        android:layout_height="71dp"
        android:contentDescription="@string/descriptionHeader"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/btnBackVehicle"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/descriptionBackButton"
        android:rotation="180"
        android:text="@string/whiteString"
        android:textColorHighlight="#00FFFFFF"
        android:textColorLink="#00FFFFFF"
        app:icon="@drawable/arrow_point_to_right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#00FFFFFF" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvVehicle"
        android:layout_width="409dp"
        android:layout_height="658dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/descriptionImageAddButtonVehicle"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_plus"
        tools:ignore="KeyboardInaccessibleWidget" />


</androidx.constraintlayout.widget.ConstraintLayout>
